# cmake_boost_example

./: CMakeLists.txt  README.md  main.cpp
lib/: LinAlg.hpp
src/: LinAlg.cpp
